refactor: Changed to Java8